MonetDB/src/mal/Tests/tst105.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## check propagation of type variables over bats
## can be checked after bat module has been added
#
#module bat2;
#command new(h:any::1,t:any::2):bat[any::1,any::2]= GDKbatnew;
!ERROR: address of function 'GDKbatnew' not found
command bat2.new(h:any::1,t:any::2):bat[any::1,any::2] = GDKbatnew;	#0 polymorphic:void (new:bat[any::1,any::2])(h:any::1)(t:any::2)
#
#a:= bat2.new(str,int);
#b:= bat2.new(str,int);
#c:= new(str,int);
#
function bat2.main():int;	#0:void (main:int)
	a := bat2.new(str,int);	#1:BAT (a:bat[str,int])(str:str)(int:int)
	b := bat2.new(str,int);	#2:BAT (b:bat[str,int])(str:str)(int:int)
	c := bat2.new(str,int);	#3:BAT (c:bat[str,int])(str:str)(int:int)
end function;	#4:void 
!ERROR: MALexception:bat2.main[1]:address of function missing
>